--- a/src/app.css
+++ b/src/app.css
@@ -50,7 +50,7 @@ main {
     100% {
         transform: rotate(1800deg);
     }
-<<<<<<< HEAD
+    <<<<<<< HEAD
 }
 
 
@@ -135,6 +135,5 @@ body {
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
     opacity: 1;
-=======
->>>>>>> parent of a87de1a (Navbar)
+    =======>>>>>>>parent of a87de1a (Navbar)
 }
