--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@
     background-color: rgb(255, 255, 255);
     background-color: aquamarine;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: auto;
     background-image: url(https://cdn.discordapp.com/attachments/930785564377088000/934495795976237216/bg01.png);
 }
 
