--- a/src/app.css
+++ b/src/app.css
@@ -7,8 +7,9 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     background-color: rgb(255, 255, 255);
     background-color: aquamarine;
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
     background-image: url(https://cdn.discordapp.com/attachments/930785564377088000/934495795976237216/bg01.png);
 }
 
