--- a/src/app.css
+++ b/src/app.css
@@ -74,9 +74,9 @@ main {
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
     /* clip-path: circle(25px at calc(0% + 45px) 45px); */
-    background: rgb(2, 84, 109);
+    background: rgb(3, 153, 199);
     clip-path: circle(25px at calc(100% - 45px) 45px);
-    transition: all 0.3s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 #active:checked~.wrapper {
@@ -100,7 +100,7 @@ main {
     /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
-    background: #000;
+    background: rgba(8, 193, 206, 0.281);
     transition: all 0.3s ease-in-out;
 }
 
