--- a/src/app.css
+++ b/src/app.css
@@ -76,7 +76,7 @@ main {
     /* clip-path: circle(25px at calc(0% + 45px) 45px); */
     background: rgb(3, 153, 199);
     clip-path: circle(25px at calc(100% - 45px) 45px);
-    transition: all 0.4s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 #active:checked~.wrapper {
@@ -100,12 +100,12 @@ main {
     /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
-    background: rgb(8, 193, 206);
+    background: rgb(0, 0, 0);
     transition: all 0.3s ease-in-out;
 }
 
 #active:checked~.menu-btn {
-    color: rgb(0, 0, 0);
+    color: #fff;
 }
 
 #active:checked~.menu-btn i:before {
