--- a/src/app.css
+++ b/src/app.css
@@ -75,6 +75,7 @@ main {
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
     /* clip-path: circle(25px at calc(0% + 45px) 45px); */
     background: rgb(3, 153, 199);
+    background-image: url(https://cdn.discordapp.com/attachments/930785564377088000/934495795976237216/bg01.png);
     clip-path: circle(25px at calc(100% - 45px) 45px);
     transition: all 0.5s ease-in-out;
 }
@@ -100,7 +101,7 @@ main {
     /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
-    background: rgb(0, 0, 0);
+    background: rgb(3, 153, 199);
     transition: all 0.3s ease-in-out;
 }
 
