--- a/src/app.css
+++ b/src/app.css
@@ -99,7 +99,7 @@ main {
     line-height: 50px;
     border-radius: 50%;
     font-size: 20px;
-    color: #fff;
+    color: rgb(0, 250, 217);
     cursor: pointer;
     /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
