--- a/src/app.css
+++ b/src/app.css
@@ -99,12 +99,13 @@ main {
     line-height: 50px;
     border-radius: 50%;
     font-size: 20px;
-    color: rgb(5, 179, 223);
+    color: rgb(255, 255, 255);
     cursor: pointer;
     /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
-    background: rgb(255, 255, 255);
+    background: rgb(0, 200, 207);
+    /* circle */
     transition: all 0.3s ease-in-out;
 }
 
