--- a/src/app.css
+++ b/src/app.css
@@ -74,7 +74,7 @@ main {
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
     /* clip-path: circle(25px at calc(0% + 45px) 45px); */
-    background: rgb(3, 153, 199);
+    background: rgba(3, 153, 199, 0);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -104,7 +104,7 @@ main {
     /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
-    background: rgb(0, 247, 226);
+    background: rgb(4, 224, 206);
     /* circle */
     transition: all 0.3s ease-in-out;
 }
