--- a/src/app.css
+++ b/src/app.css
@@ -5,8 +5,6 @@
 @tailwind utilities;
 :root {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    background-color: rgb(255, 255, 255);
-    background-color: aquamarine;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -99,7 +97,7 @@ main {
     line-height: 50px;
     border-radius: 50%;
     font-size: 20px;
-    color: rgb(255, 255, 255);
+    color: rgb(255, 246, 246);
     cursor: pointer;
     /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
@@ -147,7 +145,7 @@ main {
     position: absolute;
     content: "";
     background: #fff;
-    background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
+    background: linear-gradient(#11dfca, #ffeb3b, #ff00e0);
     /*background: linear-gradient(375deg, #1cc7d0, #2ede98);*/
     width: 104%;
     height: 110%;
