--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,8 @@
 @tailwind utilities;
 :root {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    background-color: rgb(255, 255, 255);
+    background-color: aquamarine;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -72,7 +74,7 @@ main {
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
     /* clip-path: circle(25px at calc(0% + 45px) 45px); */
-    background: rgba(3, 153, 199, 0);
+    background: rgb(3, 153, 199);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -97,11 +99,12 @@ main {
     line-height: 50px;
     border-radius: 50%;
     font-size: 20px;
-    color: rgb(255, 246, 246);
+    color: rgb(255, 255, 255);
     cursor: pointer;
     /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
+    background: rgb(3, 233, 250);
     /* circle */
     transition: all 0.3s ease-in-out;
 }
@@ -145,7 +148,7 @@ main {
     position: absolute;
     content: "";
     background: #fff;
-    background: linear-gradient(#11dfca, #ffeb3b, #ff00e0);
+    background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
     /*background: linear-gradient(375deg, #1cc7d0, #2ede98);*/
     width: 104%;
     height: 110%;
