--- a/src/app.css
+++ b/src/app.css
@@ -5,8 +5,6 @@
 @tailwind utilities;
 :root {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    background-color: rgb(255, 255, 255);
-    background-color: aquamarine;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -74,7 +72,7 @@ main {
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
     /* clip-path: circle(25px at calc(0% + 45px) 45px); */
-    background: rgb(3, 153, 199);
+    background: rgb(255, 255, 255);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -104,8 +102,8 @@ main {
     /*background: linear-gradient(-135deg, #c850c0, #4158d0);*/
     /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
-    /* circle */
-    transition: all 0.3s ease-in-out;
+    background: rgb(2, 224, 187);
+    transition: all 0.6 ease-in-out;
 }
 
 #active:checked~.menu-btn {
